after a million tries, getting the spacing correct:

--- a/product-list-with-cart-main/styles.css
+++ b/product-list-with-cart-main/styles.css
@@ -6,39 +6,42 @@
 
 body{
   
-    padding: 1rem 4rem;
+    padding: 4rem 5rem;
     background: hsl(20, 50%, 98%);
     
 }
-
-
 .desserts-container{
- display: grid;
- grid-template-columns: repeat(3, 1fr);
- border: 2px solid red;
- 
+   
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 1rem 2rem;
+}
+
+.main{
+    
+    
+   display: flex;
 }
 
 .dessert-item{
-    
-    display: flex;
    
-    flex-direction: column;
-    align-items: center;
+   display: flex;
+   flex-direction: column;
+   
+   
+    
 }
 
-.main-container{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    
-    
+
+.dessert-item img{
+  
+ max-height: 200px;
+  
+ border-radius: 0.5rem;
 }
 
 .cart-container{
-   bordeR: 2px solid blue;
+    
 }
 
-.dessert-item > img{
-    
-    border-radius: 1rem;
-}
